# project_mineiracao

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: dag.py
dbt/mineiracao_dw/: dbt_project.yml  packages.yml
dbt/mineiracao_dw/models/staging/: stg_incidentes.sql  stg_manutencoes.sql
dbt/mineiracao_dw/seeds/: dados_manutencoes.csv
mineiracao_dw/: dbt_project.yml  packages.yml
mineiracao_dw/models/staging/: _stg_models.yml  stg_maquinas.sql  stg_operadores.sql
mineiracao_dw/seeds/: dados_incidentes.csv  dados_maquinas.csv  dados_operadores.csv
